<resources>
    <string name="app_name">Stack</string>
    <string name="bar_hint">Search or enter address</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_donate">Donate</string>
    <string name="about_text">The development of Stack is led by\nAlessandro De Pasquale\n\nYou may get to me or follow the development of Stack via the buttons below.</string>
    <string name="email_noclient">No email client found</string>
    <string name="donate">By donating, you can support the development of this application.</string>
    <string name="bitcoin_noclient">No client was found</string>
    <string name="HP" translatable="false">http://duckduckgo.com</string>
    <string name="earliest_reached">Earliest page has been reached</string>
    <string name="easter_toast">You found an easter egg!</string>
    <string name="menu_page">Page&#8230;</string>
    <string name="openInApp">Open with another app</string>
    <string name="share">Share</string>
    <string name="addtohome">Add to home screen</string>
    <string name="sharewith">Share with&#8230;</string>
    <string name="search_engine">Search engine</string>
    <string name="picksergine">Pick a search engine</string>
    <string name="theme">Theme</string>
    <string name="picktheme">Pick a theme</string>
    <string name="color_scheme">Requires that the app is restarted</string>
    <string name="reload">Reload</string>
    <string name="notrack">Ask websites not to track me</string>
    <string name="notrackspec">Whether a DNT request should be sent</string>
    <string name="wanna_restart">Restart the application now?</string>
    <string name="restart_cap">RESTART</string>
    <string name="plzNo">Cancel</string>
    <string name="restarting">Restarting app…</string>
    <string name="repBug">Report a bug</string>
    <string name="ask">Ask a question</string>
    <string name="suggest">Make a suggestion</string>
    <string name="showDots">Show the menu button</string>
    <string name="appearance">Appearance</string>
    <string name="functionality">Functionality</string>
    <string name="showGPL">Released under the GNU GPLv3.0 licence</string>
    <string name="GPLsummary">Tap to see licence</string>
    <string name="dotssumm" >Requires a hardware menu button</string>
    <string name="pageNotLoaded">The page could not be loaded</string>
    <string name="checkTypos">Check the address for typing errors such as</string>
    <string name="insteadof">instead of</string>
    <string name="cantLoad">If you are unable to load any pages,</string>
    <string name="checkConn">check your network connection.</string>
    <string name="web_isPermitted">If your device or network is protected by a firewall or proxy, make sure that Stack is permitted to access the Web.</string>
    <string name="save_image">Save image</string>
    <string name="view_image">View image</string>
    <string name="share_image">Share image</string>
    <string name="share_link">Share link</string>
    <string name="added_to_home">Added to home</string>
    <string name="location">Location</string>
    <string name="askuselocation">Provide the current web page with your precise location?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="tracking">Tracking</string>
    <string name="image_downloaded">The image has been downloaded</string>
    <string name="copy_link">Copy link location</string>
    <string name="copy_image_link">Copy image location</string>
    <string name="copied">Link copied to clipboard</string>
    <string name="download">File download</string>
    <string name="askdownload">Download file?</string>
    <string name="file_downloaded">The file was downloaded</string>
    <string name="file_downloading">The file is now downloading</string>
    <string name="menu_history">History</string>
    <string name="send_email">Contact the developer</string>
    <string name="openInNewTab">Open in new tab</string>
    <string name="openNewTab">Open a new tab</string>
    <string name="nohistory">There\'s nothing here</string>
    <string name="alphathx">Special thanks to\nmy alpha tester\nAlessandro Menabue</string>
    <string name="dust">dust</string>
    <string name="version">Version</string>
    <string name="stopcklicking">Stop clicking me</string>
    <string name="askLocGeneral">Should your precise location be provided?</string>
    <string name="image">Image</string>
    <string name="pageNotLoadedNoHTML">The page could not be loaded</string>
    <string name="addtoBM">Bookmark this page</string>
    <string name="new_fol">New</string>
    <string name="folder">Folder</string>
    <string name="add_bm">Add a bookmark</string>
    <string name="favorites">Favourites</string>
    <string name="readlater">Read later</string>
    <string name="add">Add</string>
    <string name="BM_added">Bookmark added</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="delete">Delete?</string>
    <string name="deleted">Bookmark deleted</string>
    <string name="chooseSauce">Choose source...</string>
    <string name="text_size">Text size</string>
    <string name="textsize">Text size</string>
    <string name="inWeb">Within web pages</string>
    <string name="showDownloads">Show downloads</string>
    <string name="GPL" translatable="false">GPL</string>
</resources>
