<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_settings">

    <PreferenceCategory android:title="@string/appearance">
        <ListPreference
            android:key="theme"
            android:title="@string/theme"
            android:dialogTitle="@string/picktheme"
            android:entries="@array/themes"
            android:entryValues="@array/themevalues"
            android:defaultValue="def"
            android:summary="@string/color_scheme"/>

        <CheckBoxPreference
            android:key="showDots"
            android:title="@string/showDots"
            android:summary="@string/dotssumm"
            android:defaultValue="true"
            android:id="@+id/showDots"/>

        <ListPreference
            android:key="size"
            android:title="@string/text_size"
            android:dialogTitle="@string/text_size"
            android:entries="@array/sizeNames"
            android:entryValues="@array/sizeVals"
            android:defaultValue="-1"
            android:summary="@string/inWeb"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/functionality">
        <ListPreference
            android:key="searchEngine"
            android:title="@string/search_engine"
            android:dialogTitle="@string/picksergine"
            android:entries="@array/sergines"
            android:entryValues="@array/serginevalues"
            android:defaultValue="ddg"/>

        <EditTextPreference
            android:key="HP"
            android:title="Homepage"
            android:defaultValue="duckduckgo.com"
            android:hint="http://&#8230;"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/tracking">
        <ListPreference
            android:key="location"
            android:title="@string/location"
            android:dialogTitle="@string/askLocGeneral"
            android:entries="@array/location_options"
            android:entryValues="@array/locopvals"
            android:defaultValue="ask"/>

        <CheckBoxPreference
            android:key="DNT"
            android:title="@string/notrack"
            android:summary="@string/notrackspec"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/menu_about">
        <Preference
            android:key="showGPL"
            android:title="@string/showGPL"
            android:summary="@string/GPLsummary"
            android:selectable="true"/>

        <Preference
            android:key="vers"
            android:title="@string/version"/>
    </PreferenceCategory>

</PreferenceScreen>